checkout/kubernetes/checkout-frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-web
  labels:
    app: checkout-web
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: checkout-web
        tier: frontend
    template:
      metadata:
        labels:
          app: checkout-web
          tier: frontend
      spec:
        containers:
          - name: checkout-web
            image: dak4408/checkout-frontend:latest
            ports:
              - name: checkout-web
                containerPort: 8083
