checkout/kubernetes/checkout-frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkout-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: traefik
  rules:
      http:
        paths:
          - pathType: Prefix
            path: /cart(/|$)(.*)
            backend:
              service:
                name: checkout-web-service
                port:
                  number: 8083
